--- a/index.html
+++ b/index.html
@@ -2,8 +2,71 @@
 <html>
 <head>
 	<title>test</title>
+	<style type="text/css">
+	html, body, div {
+		margin: 0;
+		padding: 0;
+	}
+	#main {
+		position: fixed;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		top: 0;
+	}
+	.left,
+	.right {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+	}
+	.left {
+		left: 0;
+		right: 50%;
+		background-color: pink;
+	}
+	.right {
+		left: 50%;
+		right: 0;
+		background-color: blue;
+		overflow-y: auto;
+	}
+	</style>
 </head>
 <body>
-	test	
+	<div id="menu">
+		<div id="a">Index</div>
+		<div id="b">Guide</div>
+	</div>
+	<div id="main">
+		<div class="left"></div>
+		<div class="right">
+			sdfsdf
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			sdfsdfs
+			fsdfdsf
+			sdfdsf
+			sdfsdf
+			sdf
+			sdf
+			sdf
+			sdf
+			sdf
+			s
+			dfsf
+		</div>
+	</div>	
 </body>
 </html>
