--- a/index.html
+++ b/index.html
@@ -231,7 +231,33 @@
 			sdfsdf
 		</section>
 	</section> -->
-	<script src="./js/ajax.js"></script>
+	<script>
+	var xmlHttp = null;
+	try {
+		// Firefox, Opera 8.0+, Safari
+		xmlHttp = new XMLHttpRequest()
+	} catch (e) {
+		// Internet Explorer
+		try {
+			xmlHttp = new ActiveXObject("Msxml2.XMLHTTP")
+		} catch (e) {
+			xmlHttp = new ActiveXObject("Microsoft.XMLHTTP")
+		}
+		
+	}
+
+	function ajax(url, success, fail) {
+		xmlHttp.onreadystatechange = function () {
+			if (xmlHttp.readyState ==4 && (xmlHttp.status==200 || xmlHttp.status==304)) {
+				success(JSON.parse(xmlHttp.responseText))
+			} else {
+				fail()
+			}
+		}
+		xmlHttp.open("GET", url, true)
+		xmlHttp.send(null)
+	}	
+	</script>
 	<script>
 		var host = 'https://tools-cmd.herokuapp.com'
 
