关键字添加

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 	<title>Instagram Photo, Video Downloader</title>
+	<meta name="description" content="Instagram photo, video downloader - Free, online, and quicker download.">
+	<meta name="keywords" content="Instagram image download, Instagram video download, Instagram download photos, Download Instagram photos, Download instagram video, Instgram photo download online"> 
 	<style>
 		* { margin: 0; padding: 0; }
 
