--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Instagram Photo, Video Downloader</title>
 	<meta name="description" content="Instagram photo, video downloader - Free, online, and quicker download.">
 	<meta name="keywords" content="Instagram image download, Instagram video download, Instagram download photos, Download Instagram photos, Download instagram video, Instgram photo download online"> 
+	<meta name="google-site-verification" content="76lb5OXKGmcAXUIp8sdXslchZptTw7B46aQn3WP924o" />
 	<style>
 		* { margin: 0; padding: 0; }
 
